# cmake-demo

./: .travis.yml  CMakeLists.txt  README.md
GUI/: CMakeLists.txt
GUI/header/: gui.h
GUI/src/: gui.cpp  main.cpp
GraphicsLib/: CMakeLists.txt
GraphicsLib/header/: internal.h
GraphicsLib/src/: graphics.cpp  test.cpp
GraphicsLib/test/: test.cpp
Header/: graphics.h  interpreter.h
Interpreter/: CMakeLists.txt
Interpreter/src/: interpreter.cpp  test.cpp
Interpreter/test/: test.cpp
googletest/googletest/test/: gtest-death-test_test.cc  gtest_color_test.py
