set(SOURCE_FILES src/interpreter.cpp)
include_directories(header)
add_library(${INTERPRETER_LIBRARIES} STATIC ${SOURCE_FILES})
target_link_libraries(${INTERPRETER_LIBRARIES} ${GRAPHICS_LIBRARIES})

include_directories(${GTEST_ROOT}/include/gtest)
set(TEST_FILES src/test.cpp)
set(TEST InterpreterTest)
ADD_EXECUTABLE(${TEST} ${TEST_FILES})
target_link_libraries(${TEST} ${INTERPRETER_LIBRARIES} gtest gtest_main)